# telstock

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: index.py  webhook.py
src/telstock/: __init__.py  bot.py  config.py  market.py
tests/: test_bot.py  test_market.py
