[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telstock"
version = "0.1.0"
description = "A Telegram bot for tracking US stock prices and valuation verdicts (P/E, Forward P/E, PEG)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
